--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "dev:prepare": "nuxt-module-build --stub && nuxi prepare playground"
   },
   "dependencies": {
-    "@nuxt/kit": "^3.0.0"
+    "@nuxt/kit": "^3.0.0",
+    "ajv": "^8.12.0",
+    "ajv-formats": "^2.1.1",
+    "consola": "^2.15.3",
+    "mongodb": "^4.13.0"
   },
   "devDependencies": {
     "@nuxt/module-builder": "^0.2.1",
