--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@nuxt/kit": "^3.1.0",
     "ajv": "^8.12.0",
     "ajv-formats": "^2.1.1",
+    "chalk": "^5.2.0",
     "consola": "^2.15.3",
     "hookable": "^5.4.2",
-    "mongodb": "^4.13.0"
+    "mongodb": "^4.13.0",
+    "ufo": "^1.0.1"
   },
   "devDependencies": {
     "@nuxt/module-builder": "^0.2.1",
