--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@nuxt/kit": "^3.1.0",
+    "ajfg": "1.x",
     "ajv": "^8.12.0",
     "ajv-formats": "^2.1.1",
     "chalk": "^5.2.0",
