--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "dist"
   ],
   "scripts": {
-    "prepack": "nuxt-module-build",
+    "build": "nuxt-module-build",
     "dev": "nuxi dev playground",
+    "lint": "eslint --ext .js,.ts,.vue .",
     "dev:build": "nuxi build playground",
+    "prepack": "yarn build",
     "dev:prepare": "nuxt-module-build --stub && nuxi prepare playground"
   },
   "dependencies": {
