--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-module",
-  "version": "1.0.0",
+  "name": "nuxt-oa",
+  "version": "0.0.0",
   "license": "MIT",
   "type": "module",
   "exports": {
@@ -40,5 +40,9 @@
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "eslint": "^8.32.0",
     "nuxt": "^3.1.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Morgbn/nuxt-oa.git"
   }
 }
