--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "@nuxt/kit": "^3.1.0",
     "ajv": "^8.12.0",
-    "ajv-formats": "^2.1.1",
+    "ajv-formats": "^3.0.0-rc.0",
     "chalk": "^5.2.0",
     "consola": "^2.15.3",
     "hookable": "^5.4.2",
