--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ajv-formats": "^3.0.0-rc.0",
     "chalk": "^5.2.0",
     "consola": "^2.15.3",
+    "defu": "^6.1.2",
     "hookable": "^5.4.2",
     "j2u": "1.x",
     "mongodb": "^4.13.0",
