--- a/package.json
+++ b/package.json
@@ -15,31 +15,31 @@
     "dist"
   ],
   "scripts": {
-    "build": "nuxt-module-build",
+    "build": "nuxt-module-build build",
     "dev": "nuxi dev playground",
     "lint": "eslint --ext .js,.ts,.vue .",
     "dev:build": "nuxi build playground",
     "prepack": "yarn build",
-    "dev:prepare": "nuxt-module-build --stub && nuxt-module-build prepare && nuxi prepare playground"
+    "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground"
   },
   "dependencies": {
-    "@nuxt/kit": "^3.7.4",
+    "@nuxt/kit": "^3.8.1",
     "ajv": "^8.12.0",
     "ajv-formats": "^3.0.0-rc.0",
     "chalk": "^5.3.0",
     "consola": "^3.2.3",
-    "defu": "^6.1.2",
+    "defu": "^6.1.3",
     "hookable": "^5.5.3",
     "j2u": "1.5.0",
     "mongodb": "^5.6.0",
     "ufo": "^1.3.1"
   },
   "devDependencies": {
-    "@nuxt/module-builder": "^0.5.2",
-    "@nuxt/schema": "^3.7.4",
+    "@nuxt/module-builder": "^0.5.4",
+    "@nuxt/schema": "^3.8.1",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "eslint": "^8.50.0",
-    "nuxt": "^3.7.4",
+    "eslint": "^8.53.0",
+    "nuxt": "^3.8.1",
     "typescript": "^5.2.2"
   },
   "repository": {
