--- a/package.json
+++ b/package.json
@@ -23,24 +23,24 @@
     "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground"
   },
   "dependencies": {
-    "@nuxt/kit": "^3.10.2",
-    "ajv": "^8.12.0",
-    "ajv-formats": "^3.0.0-rc.0",
+    "@nuxt/kit": "^3.11.2",
+    "ajv": "^8.13.0",
+    "ajv-formats": "^3.0.1",
     "chalk": "^5.3.0",
     "consola": "^3.2.3",
     "defu": "^6.1.4",
     "hookable": "^5.5.3",
-    "j2u": "^1.6.0",
+    "j2u": "^1.7.4",
     "mongodb": "^5.6.0",
-    "ufo": "^1.4.0"
+    "ufo": "^1.5.3"
   },
   "devDependencies": {
-    "@nuxt/module-builder": "^0.5.5",
-    "@nuxt/schema": "^3.10.2",
+    "@nuxt/module-builder": "^0.6.0",
+    "@nuxt/schema": "^3.11.2",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "eslint": "^8.56.0",
-    "nuxt": "^3.10.2",
-    "typescript": "^5.3.3"
+    "nuxt": "^3.11.2",
+    "typescript": "^5.4.5"
   },
   "repository": {
     "type": "git",
