--- a/playground/.env.example
+++ b/playground/.env.example
@@ -1,2 +1,2 @@
-DB_URL=mongodb://username:password@host:port/db
-PII_ENCRYPT_KEY="32+bit+key+6/M5W6Td61nO69SQv5p7GyV18wrSS+9k="
+NUXT_OA_DB_URL=mongodb://username:password@host:port/db
+NUXT_OA_CIPHER_KEY="32+bit+key+6/M5W6Td61nO69SQv5p7GyV18wrSS+9k="
