--- a/package.json
+++ b/package.json
@@ -5,12 +5,18 @@
   "type": "module",
   "exports": {
     ".": {
-      "import": "./dist/module.mjs",
-      "require": "./dist/module.cjs"
+      "types": "./dist/types.d.mts",
+      "import": "./dist/module.mjs"
     }
   },
-  "main": "./dist/module.cjs",
-  "types": "./dist/types.d.ts",
+  "main": "./dist/module.mjs",
+  "typesVersions": {
+    "*": {
+      ".": [
+        "./dist/types.d.mts"
+      ]
+    }
+  },
   "files": [
     "dist"
   ],
@@ -23,24 +29,24 @@
     "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground"
   },
   "dependencies": {
-    "@nuxt/kit": "^3.15.4",
-    "ajv": "^8.13.0",
+    "@nuxt/kit": "^4.2.2",
+    "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
-    "chalk": "^5.4.1",
-    "consola": "^3.4.0",
+    "chalk": "^5.6.2",
+    "consola": "^3.4.2",
     "defu": "^6.1.4",
-    "hookable": "^5.5.3",
+    "hookable": "^6.0.1",
     "j2u": "^1.7.9",
     "mongodb": "^5.6.0",
-    "ufo": "^1.5.3"
+    "ufo": "^1.6.3"
   },
   "devDependencies": {
-    "@nuxt/eslint-config": "^1.1.0",
-    "@nuxt/module-builder": "^0.8.4",
-    "@nuxt/schema": "^3.15.4",
-    "eslint": "^9.21.0",
-    "nuxt": "^3.15.4",
-    "typescript": "^5.8.2"
+    "@nuxt/eslint-config": "^1.12.1",
+    "@nuxt/module-builder": "^1.0.2",
+    "@nuxt/schema": "^4.2.2",
+    "eslint": "^9.39.2",
+    "nuxt": "^4.2.2",
+    "typescript": "^5.9.3"
   },
   "repository": {
     "type": "git",
